--- a/Receive/.project
+++ b/Receive/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Receive</name>
+	<name>ReceiveFilters</name>
 	<comment />
 	<projects>
 	</projects>
