--- a/Transmit/.project
+++ b/Transmit/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Transmit</name>
+	<name>TrasmitInterrupt</name>
 	<comment />
 	<projects>
 	</projects>
