--- a/BamocarControlBoard/.project
+++ b/BamocarControlBoard/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>BamocarControlBoard-HILtest</name>
+	<name>BamocarControlBoard</name>
 	<comment />
 	<projects>
 	</projects>
