WIP, ADC_MC class ready for testing

--- a/TrueStudioProject/.cproject
+++ b/TrueStudioProject/.cproject
@@ -48,6 +48,7 @@
 									<listOptionValue builtIn="false" value="../Drivers/CMSIS/Include"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Motor_controller_F303CC/Modules}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Motor_controller_F303CC/Test_benches}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Motor_controller_F303CC/Matlab}&quot;"/>
 								</option>
 								<option id="com.atollic.truestudio.gcc.symbols.defined.1670122205" name="Defined symbols" superClass="com.atollic.truestudio.gcc.symbols.defined" valueType="definedSymbols">
 									<listOptionValue builtIn="false" value="__weak=__attribute__((weak))"/>
@@ -118,6 +119,8 @@
 					<sourceEntries>
 						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Drivers"/>
 						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Inc"/>
+						<entry flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="Math_functions"/>
+						<entry flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="Matlab"/>
 						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Middlewares"/>
 						<entry flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="Modules"/>
 						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Src"/>
